--- a/_posts/2023-02-20-INMEDIA-環保基金主席稱將要求申請者遵守國安-兼審查曾否涉-港獨-活動.html
+++ b/_posts/2023-02-20-INMEDIA-環保基金主席稱將要求申請者遵守國安-兼審查曾否涉-港獨-活動.html
@@ -8,7 +8,8 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/202302201_1.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>《文匯報》早前在A1頭版，批評有環團借環保之名，申請政府「環境及自然保育基金」撥款後搞「港獨」活動。基金委員會主席、民建聯立法會議員鄭泳舜的父親鄭錦鐘接受傳媒專訪時指，稱基金已要求申請機構及負責人需聲明立場及遵守《香港國安法》，亦會查看申請者過去有否涉及參與「港獨」活動。《獨媒》正向環保署查詢。</p>
+<img src="https://www.inmediahk.net/files/column_images/202302201_1.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>《文匯報》早前在A1頭版，批評有環團借環保之名，申請政府「環境及自然保育基金」撥款後搞「港獨」活動。基金委員會主席、民建聯立法會議員鄭泳舜的父親鄭錦鐘接受傳媒專訪時指，稱基金已要求申請機構及負責人需聲明立場及遵守《香港國安法》，亦會查看申請者過去有否涉及參與「港獨」活動。</p>
+<p>環境及生態局回覆《獨媒》查詢時指，獲「基金」資助的機構須簽訂資助協議，當中包括遵守國安法及維護國家安全等條文，如申請機構在遞交資助申請時，沒有遞交簽妥的維護國家安全確認書，申請將被視為無效。局方又指，現時未有分類統計不獲撥款的機構數目及原因，但一般涉及建議項目的質素略遜、成本效益欠佳，以及申請書資料不全等。</p>
 <p><strong>11環團遭追擊 被批以環保之名支持「黑暴」</strong></p>
 <p>建制組織「元朗監察議會聯會」早前指有11間環團包括「環保觸覺」、「綠領行動」、「守護大嶼聯盟」、「創建香港」、「香港自然生態論壇」、「龍尾環境教育中心」、「自然脈絡」、「香港海豚保育學會」，「大嶼山愛護水牛協會」、「土地正義聯盟」以及「智在環保」，借環保之名進行「慈善籌款」活動，期間散播仇恨政府的言論。</p>
 <p>《文匯報》其後亦有多篇報導，點名指3個年度共獲「環境及自然保育基金」撥款1,320萬的「環保觸覺」，多次在其社交媒體「發布支持黑暴相關的帖文」，另有多個環團在2019年6月10日發聲明響應「罷市運動」。</p>
@@ -20,5 +21,7 @@ author: 獨媒報導
 <p><strong>要求項目訂KPI但何謂達標？ 鄭錦鐘：不想講得太死</strong></p>
 <p>除了加入《國安》條文，鄭錦鐘又表示會訂立KPI，確保活動成效。至於何謂達標？他稱「不想『講得太死』，擔心失去靈活性」，但他提到不會以活動參加人數作指標，反會着重參加者在活動後的環保意識是否有提升等。</p>
 <p>「環境及自然保育基金」目前資助環境運動委員會和其他非牟利機構，推動綠色項目和活動，包括社區減少廢物、環保教育及社區參與、廢物分類、環保研究、屋苑廚餘等。在2021/22年度，基金共接獲581份申請，其中201份獲批，撥款額為2.5億。</p>
-<p>《獨媒》正就事件向環保署查詢。</p>
+<p>環境及生態局：沒簽妥維護國家安全確認書 申請將被視為無效</p>
+<p>環境及生態局回覆《獨媒》查詢，指為確保公帑妥善使用，申請「基金」撥款的團體必須為建議的環保項目提出及執行有效的表現指標，並須嚴格遵守香港法律，包括國安法。 而獲「基金」資助的機構須簽訂資助協議，當中包括遵守國安法及維護國家安全等條文，如申請機構在遞交資助申請時，沒有遞交簽妥的維護國家安全確認書，申請將被視為無效。 </p>
+<p>至於現時有多少個申請機構因未能通過《香港國安法》審批而不獲撥款。環境及生態局表示不獲「基金」資助的個案一般涉及建議項目的質素略遜、成本效益欠佳，以及申請書資料不全等，但未有分類統計。</p>
 </div></div></div>
