--- a/_posts/2023-02-19-PQ-慕尼黑安全會議-波羅的海及中北歐國家力保西方團結-布林肯-王毅場邊面會.html
+++ b/_posts/2023-02-19-PQ-慕尼黑安全會議-波羅的海及中北歐國家力保西方團結-布林肯-王毅場邊面會.html
@@ -32,7 +32,7 @@ author: 王雪俐
 
 
 
-<figure class="wp-block-image size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/6b9ea965-慕尼黑會議、王毅（圖／慕尼黑會議官網）.jpg" alt="" class="wp-image-127756" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/6b9ea965-慕尼黑會議、王毅（圖／慕尼黑會議官網）.jpg 823w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/6b9ea965-慕尼黑會議、王毅（圖／慕尼黑會議官網）-300x225.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/6b9ea965-慕尼黑會議、王毅（圖／慕尼黑會議官網）-768x576.jpg 768w" sizes="(max-width: 823px) 100vw, 823px" /><figcaption>王毅在慕尼黑會議稱，中國將發布「全球安全倡議概念文件」。但美國務卿布林肯警告中國在俄烏戰爭玩兩面手法會有後果的（圖／慕尼黑會議官網）</figcaption></figure>
+<figure class="wp-block-image size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/6b9ea965-慕尼黑會議、王毅（圖／慕尼黑會議官網）.jpg" alt="" class="wp-image-127756" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/6b9ea965-慕尼黑會議、王毅（圖／慕尼黑會議官網）.jpg 823w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/6b9ea965-慕尼黑會議、王毅（圖／慕尼黑會議官網）-300x225.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/6b9ea965-慕尼黑會議、王毅（圖／慕尼黑會議官網）-768x576.jpg 768w" sizes="(max-width: 823px) 100vw, 823px" /><figcaption>王毅在慕尼黑會議稱，中國將發布「全球安全倡議概念文件」。但美國務卿布林肯警告中國在俄烏戰爭玩兩面手法會有後果的（圖／慕尼黑會議官網）</figcaption></figure>
 
 
 
