--- a/_posts/2023-02-22-INMEDIA-初選47人案-官問是否所有參選者皆同意用否決權-區諾軒-不敢武斷-只是無人公開反對.html
+++ b/_posts/2023-02-22-INMEDIA-初選47人案-官問是否所有參選者皆同意用否決權-區諾軒-不敢武斷-只是無人公開反對.html
@@ -27,8 +27,26 @@ author: 獨媒報導
 <p>列席認罪被告包括馮達浚、朱凱廸、梁晃維、譚凱邦、岑敖暉、黃之鋒、袁嘉蔚及吳敏兒，全被安排在延伸庭就坐。</p>
 <p>案件編號：HCCC69/2022</p>
 <p><strong>審訊第十三日</strong><br />
-【初選47人案】官問是否所有參選者皆同意用否決權 區諾軒：不敢武斷，只是無人公開反對<br />
-【初選47人案】<a href="https://www.inmediahk.net/node/1094606/">區諾軒：新西協議為「會」用權否決財案 其餘4區為「積極」運用</a></p>
+【初選47人案】<a href="https://www.inmediahk.net/node/1094606/">區諾軒：新西協議為「會」用權否決財案 其餘4區為「積極」運用</a><strong>審訊第十三日</strong><br />
+【初選47人案】官問是否所有參選者皆同意用否決權 區諾軒：不敢武斷，只是無人公開反對</p>
+<p><strong>審訊第十二日</strong><br />
+【初選47人案】<a href="https://www.inmediahk.net/node/1094566/">庭上播立會過半記者會 張超雄：如成功中共將學習尊重港人 如失敗打壓將以倍計</a><br />
+【初選47人案】<a href="https://www.inmediahk.net/node/1094571/">控方欲再播片官阻止：如將未烹煮的原材料呈予飢餓食客</a><br />
+【初選47人案】<a href="https://www.inmediahk.net/node/%E7%A4%BE%E9%81%8B/%E3%80%90%E5%88%9D%E9%81%B847%E4%BA%BA%E6%A1%88%E3%80%91%E5%8D%80%E8%AB%BE%E8%BB%92%E7%A8%B1%E6%86%82%E7%B0%BD%E5%8D%94%E8%AD%B0%E8%87%B4%E9%81%95%E6%B3%95%E6%88%96dq%EF%BC%9A%E6%90%9E%E5%88%9D%E9%81%B8%E5%94%94%E6%87%89%E8%A9%B2%E8%AE%93%E5%8F%83%E5%8A%A0%E8%80%85%E7%8A%AF%E6%B3%95">區諾軒稱憂簽協議致違法或DQ：搞初選唔應該讓參加者犯法</a></p>
+<p><strong>審訊第十一日</strong><br />
+【初選47人案】<a href="https://www.inmediahk.net/node/1094550/">控方稱引用所有論壇言論舉證 官質疑：Say Hello不能成證據吧？</a><br />
+【初選47人案】<a href="https://www.inmediahk.net/node/1094553/">重溫超區論壇 王百羽稱將親中保皇議員「一個一個車出去」論惹庭上大笑</a></p>
+<p><strong>審訊第十日</strong><br />
+【初選47人案】<a href="https://www.inmediahk.net/node/1094505/">九東僅一人不認罪仍播論壇全片 控方指會引「共謀者原則」舉證</a><br />
+【初選47人案】<a href="https://www.inmediahk.net/node/1094514/">重溫港島論壇徐子見被問年紀大 回應稱「有少少年齡歧視」 庭上多人大笑</a></p>
+<p><strong>審訊第九日</strong><br />
+【初選47人案】<a href="https://www.inmediahk.net/node/1094469/">區諾軒指被捕前已刪WhatsApp協調群組內容 須靠趙家賢紀錄重溫</a><br />
+【初選47人案】<a href="https://www.inmediahk.net/node/1094482/">播九西論壇黃碧雲被質詢 庭上屢傳笑聲</a></p>
+<p><strong>審訊第八日</strong><br />
+【初選47人案】<a href="https://www.inmediahk.net/node/1094454/">辯方批控方引導性提問 官稱一直等待反對、驚訝無人提出</a><br />
+【初選47人案】<a href="https://www.inmediahk.net/node/1094457/">區諾軒指港島參選人對否決財案「漠不關心」 司馬文明確反對</a><br />
+【初選47人案】<a href="https://www.inmediahk.net/node/1094460/">區諾軒：九西協調岑子杰質疑否決財案 稱支持民生議案如全民退保</a><br />
+【初選47人案】<a href="https://www.inmediahk.net/node/1094461/">區諾軒指鄒家成質問為何不稱「會」否決財案 戴耀廷稱用「積極」冀保留彈性</a></p>
 <p><strong>審訊第十二日</strong><br />
 【初選47人案】<a href="https://www.inmediahk.net/node/1094566/">庭上播立會過半記者會 張超雄：如成功中共將學習尊重港人 如失敗打壓將以倍計</a><br />
 【初選47人案】<a href="https://www.inmediahk.net/node/1094571/">控方欲再播片官阻止：如將未烹煮的原材料呈予飢餓食客</a><br />
