Update VOCUS 2023-02-24 patch

--- a/_posts/2023-02-23-VOCUS-85年前的今天-蘇聯轟炸台北.html
+++ b/_posts/2023-02-23-VOCUS-85年前的今天-蘇聯轟炸台北.html
@@ -42,15 +42,10 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 <div class="draft-block draft--p left">《喀秋莎》，也正好是一首二戰之前就廣泛流傳於蘇聯的歌曲，更被視為是替蘇聯士兵送行的愛情歌曲；</div>
 <figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/6c93b402-3c33-4464-8e1e-8b52d07938a8.jpg" data-width="750" data-height="460" data-position="center" src="https://images.vocus.cc/6c93b402-3c33-4464-8e1e-8b52d07938a8.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">在日本電視動畫《少女與戰車》（ガールズ&amp;パンツァー / GIRLS und PANZER），以及經典的任天堂紅白機名作《熱血高校》（熱血高校ドッジボール部）蘇聯關卡中，更能聽到本曲令人為之驚豔的重新詮釋。</div>
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/4D-Ch5RK4LA"></div>
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/75lg16lRVBg"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/4D-Ch5RK4LA"></iframe></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/75lg16lRVBg"></iframe></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 iegMSY"></pre></div>
 <div class="draft-block draft--p left">圖文來源；一併致謝：</div>
 <div class="draft-block draft--p left"><a href="https://en.wikipedia.org/wiki/Pavel_Rychagov" target="_blank" class="draft--a">https://en.wikipedia.org/wiki/Pavel_Rychagov</a></div>
 <div class="draft-block draft--p left"><a href="https://en.wikipedia.org/wiki/Soviet_Volunteer_Group" target="_blank" class="draft--a">https://en.wikipedia.org/wiki/Soviet_Volunteer_Group</a></div>
 <div class="draft-block draft--p left"><a href="https://en.wikipedia.org/wiki/Taihoku_Air_Strike" target="_blank" class="draft--a">https://en.wikipedia.org/wiki/Taihoku_Air_Strike</a></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
