--- a/_posts/2023-02-23-PQ-消滅在野進步派-堵斷北韓影響力-韓總統尹錫悅智囊團-不能放過李在明.html
+++ b/_posts/2023-02-23-PQ-消滅在野進步派-堵斷北韓影響力-韓總統尹錫悅智囊團-不能放過李在明.html
@@ -108,7 +108,7 @@ author: 陳怡菱
 
 
 
-<p class="pqnote"><strong>「南南葛藤」（남남갈등）</strong><br>指韓戰休戰並未正式告終而朝鮮半島南北分裂的狀態下，南韓內部進步左派與保守右派之間的對立衝突及分裂。韓國政局受到其國內以「戰東西」的地區情節產生的保守與進步勢力影響深遠。1970 年代以東南部慶尚道為保守派地盤的朴正熙掌握了國家大權，而以西南部全羅道為地盤的金大中主張施行改革性的政策挑戰總統大位，從那時開始韓國進步保守的政爭就開打了。<br><br>他們之間的最大的差異不在內政而是對北韓的態度。保守派認為總有一天要以經濟實力等力量來吸收統一北韓，對北韓採強硬立場。另一方面，進步派認為要和不北韓和解、推展合作，而且北韓是要「和平統一的同胞」，終究是同一個民族，所以對北韓很寬容，也會提供援助。<br><br>另外，在對美關係，保守派主張與美國保持強力的合作關係，共同掌控朝鮮半島局勢；進步派則要與美國保持一定距離，掌握朝鮮半島局勢的主導權。對外關係，保守派以「韓國（南韓）」的國家利益為優先；進步派不僅韓國自己還要加上北韓同胞以建設一個共同體為目標。</p>
+<p class="pqnote"><strong>「南南葛藤」（남남갈등）</strong><br>指韓戰休戰並未正式告終而朝鮮半島南北分裂的狀態下，南韓內部進步左派與保守右派之間的對立衝突及分裂。韓國政局受到其國內以「戰東西」的地區情節產生的保守與進步勢力影響深遠。1970 年代以東南部慶尚道為保守派地盤的朴正熙掌握了國家大權，而以西南部全羅道為地盤的金大中主張施行改革性的政策挑戰總統大位，從那時開始韓國進步保守的政爭就開打了。<br><br>他們之間的最大的差異不在內政而是對北韓的態度。保守派認為總有一天要以經濟實力等力量來吸收統一北韓，對北韓採強硬立場。另一方面，進步派認為要和北韓和解、推展合作，而且北韓是要「和平統一的同胞」，終究是同一個民族，所以對北韓很寬容，也會提供援助。<br><br>另外，在對美關係，保守派主張與美國保持強力的合作關係，共同掌控朝鮮半島局勢；進步派則要與美國保持一定距離，掌握朝鮮半島局勢的主導權。對外關係，保守派以「韓國（南韓）」的國家利益為優先；進步派不僅韓國自己還要加上北韓同胞以建設一個共同體為目標。</p>
 
 
 
