--- a/_posts/2023-02-26-INITIUM-弦子-上野千鹤子时代的女权主义者-如何面对被-成功婚姻-挑战的女权叙事.html
+++ b/_posts/2023-02-26-INITIUM-弦子-上野千鹤子时代的女权主义者-如何面对被-成功婚姻-挑战的女权叙事.html
@@ -11,7 +11,7 @@ author: 弦子
 <p>「上野千鹤子曾以为婚姻制度会在她的世代里结束，可父权制对女性的吸引力却顺利延续了下去。」</p><p>弦子</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230226-opinion-new-problems-china-feminism-facing/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/02/d0f0803d3d6e4961b71f47865a8892ef.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="全嘻嘻微博的视频。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">全嘻嘻微博的视频。<span class="credit">图：影片截图</span></figcaption></figure><p><small><a href="https://theinitium.com/channel/her-country/">“女人没有国家？”</a>是端传媒新开设的专栏，名字源于伍尔芙的一句话“As a woman I have no country”，但我们保留了一个问号，希望能从问号出发，与你探讨女性和国家的关系，聆听离散中的女性故事和女性经验。我是这个栏目的编辑符雨欣。看似私领域的婚姻，指向的是问号背后、“国家”之外的另一个制度压迫，一个不可能完全离开国家的语境、却又对所有女性具有共性的制度。这帮助我们想像女性身上的种种桎梏之网的复杂性。</small></p>
 <p><strong>（中国女性主义者、发声者、写作者）</strong></p>
-<p><br><br>超越了上野本身观点所引起的关注，up主全嘻嘻与上野千鹤子的对谈成为又一个性别议题的讨论热点，全嘻嘻在视频里塑造了一个婚姻幸福且对女权主义抱有追求的精英女性形象，这引起了普遍的质疑：她的婚姻是否真的幸福、自身婚姻幸福的女性是否看不见结构性问题、在上野教授面前讨论婚姻是不是在浪费机会？</p>
+<p>超越了上野本身观点所引起的关注，up主全嘻嘻与上野千鹤子的对谈成为又一个性别议题的讨论热点，全嘻嘻在视频里塑造了一个婚姻幸福且对女权主义抱有追求的精英女性形象，这引起了普遍的质疑：她的婚姻是否真的幸福、自身婚姻幸福的女性是否看不见结构性问题、在上野教授面前讨论婚姻是不是在浪费机会？</p>
 <p>这三个疑问真正在问的问题，其实是全嘻嘻本人是否幸福/有资格成为女权主义者/她应该问什么，舆论讨论也因此无可避免地聚焦在了对全嘻嘻个人的批评——对个体的过分关注，往往是公众自身焦虑的情绪性投射。</p>
 <p>全嘻嘻的视频显然有讨论的意义，意义并不在于她本人如何试图通过上野千鹤子的观点达成逻辑自洽，而在于女权主义者能否在面对这样一位精英女性与她所代表的处境时，达成自身的逻辑自洽。</p>
  
