--- a/_posts/2023-02-27-INITIUM-流浪地球2-科幻版愚公移山-流浪地球系列定义了中国科幻电影.html
+++ b/_posts/2023-02-27-INITIUM-流浪地球2-科幻版愚公移山-流浪地球系列定义了中国科幻电影.html
@@ -12,14 +12,29 @@ author: 特约撰稿人 木卫二
             <figcaption itemprop="caption"> 《流浪地球2》剧照。<span class="credit">网上图片  </span></figcaption></figure><blockquote>
 <p>《流浪地球2》呈现了中国式的经典三段推理：中国带头拯救地球，中国人又属于人类，所以是全人类团结一致拯救地球。</p>
 </blockquote>
-<p>任何一部电影，一种计划，都敌不过时间的筛子和高墙。时间会充当评价和淘汰的尺度，截断火爆、狂热和流行。《流浪地球2》，小说原本，未来的电影三部曲，都不能例外。</p>
-<p>长达2500年的流浪地球计划，分阶段进行。书中描述为一百代人，堪称千秋万代的事业。想想看，要从春秋战国，走到此时此刻的现在。中国历史，可以再来上一轮的意思。</p>
-<p>尚无需动用时间之尺，讨论价值和影响之前，电影已经在其他尺度上，暴露它的缺陷不足。</p>
+<p>任何一部电影，一种计划，都敌不过时间的筛子和高墙。时间会充当评价和淘汰的尺度，截断火爆、狂热和流行。《流浪地球2》，小说原本，未来的电影三部曲，都不能例外。<br><br>长达2500年的流浪地球计划，分阶段进行。书中描述为一百代人，堪称千秋万代的事业。想想看，要从春秋战国，走到此时此刻的现在。中国历史，可以再来上一轮的意思。<br><br>尚无需动用时间之尺，讨论价值和影响之前，电影已经在其他尺度上，暴露它的缺陷不足。</p>
 <h2>1、原著、中国与科幻的尺度</h2>
 <blockquote>
 <p>“这时木星已占满了整个天空，地球仿佛是浮在木星沸腾的暗红色云海上的一只气球！” ——摘自小说《流浪地球》</p>
 </blockquote>
-<p>《流浪地球》刊载于2000年的中国科幻杂志《科幻世界》。彼时，又一轮世界末日猜想刚结束。计算机互联网，正要大行其道，九一一事件将发生。对比后来的《三体》大作，不难发现刘慈欣笔法，尚还比较古典。他时以少年视角，时以上帝视角，带出遭遇日出，穿越冰原，直面木星，大段大段的冲击体验和心理描写。</p>
+<p>《流浪地球》刊载于2000年的中国科幻杂志《科幻世界》。彼时，又一轮世界末日猜想刚结束。计算机互联网，正要大行其道，九一一事件将发生。对比后来的《三体》大作，不难发现刘慈欣笔法，尚还比较古典。他时以少年视角，时以上帝视角，带出遭遇日出，穿越冰原，直面木星，大段大段的冲击体验和心理描写。<br><br>坊间有传，《流浪地球》的设定与架构，本也是长篇体量。因其背景宏大，短篇也给电影改编留下了充裕的组织空间。电影导演贝托鲁奇（Bernardo Bertolucci）提到一种有趣说法：为了忠于原著，电影可以——有时是必须——不忠于原著，才能获得“忠实”。改编为电影的《流浪地球》（2019），出现了空间站、点燃木星、智能机器人MOSS，都是小说中没有涉及的。电影制作，有刘慈欣本人监制护驾，但《流浪地球2》分明是从《流浪地球》衍生出来的产品。较之前作改编，它与原著小说，更加不像了。<br><br>小说中的太阳氦闪，如同不可抗逆的天命，皇帝要下千百道的罪己诏。续集沿用框架设定，沉迷于机器广播的背诵复读。再一语挑明《流浪地球2》的科幻故事，它讲的是人类与量子计算机人工智能的对抗。如果要将小说搬字过纸，原样复制，展示个人和几代人的命运——被流浪地球计划裹挟的不安神思，从恐惧，到迷茫，及希望，那将会是一部科幻背景的艺术片，如同喜欢在电影里天旋地转、人物凝神呓语的泰伦斯·马力克（Terrence Malick）。有趣的是，年关前后，难产多年的《三体》影像化终于迈步，先动画，后剧集，一并上线。纯粹抄书的故事还原，剧集居然得到不少好评——尤其是把《三体》小说奉若圣经的书迷，大感意外。</p>
+<blockquote>
+<p>许多观众把硬科幻，看做国家硬实力，此类骄傲解读与兴奋言表，蔚然成风。好在导演相对清醒，知道未来要做的，是全球视角的科幻片。依中国和科幻的双重尺度，《流浪地球》有类型突破，可谓从无到有。</p>
+</blockquote>
+<p>郭帆团队的改编，走商业电影的路子。他深谙爆米花的花语，重型巨物，连环爆炸，最后一秒钟营救，噼里啪啦。这些行星发动机一类的美术制景，看上去高温燃烧预算的轰然场面，无一不在告诉影院观众，中国可以出产硬核科幻大片。</p>
+<p>再硬的硬核科幻，终究要作为文化产品输出，是软实力。许多观众把硬科幻，看做国家硬实力，此类骄傲解读与兴奋言表，蔚然成风。好在导演相对清醒，知道未来要做的，是全球视角的科幻片。依中国和科幻的双重尺度，《流浪地球》有类型突破，可谓从无到有。背后正是刘慈欣一人如椽大笔，写就中国科幻，值得肯定与记录。作为类型的科幻电影，《流浪地球》系列在国内无传统可循，不是《大气层消失》，更不会是《上海堡垒》。它更靠近外国的科幻电影谱系，联想到《2001太空漫游》、《太空先锋》和《星际穿越》的过场桥段，不足为奇。一再搬演最后一分钟营救的《流浪地球2》，它在电影手法上，说靠近百年前大卫·格里菲斯（David Llewelyn Wark Griffith）的《党同伐异》（Intolerance，1916），也不为过。</p>
+ 
+ 
+ 
+
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
  
  
  
@@ -42,26 +57,7 @@ author: 特约撰稿人 木卫二
  
  
  
- 
- 
- 
-
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
-<p>坊间有传，《流浪地球》的设定与架构，本也是长篇体量。因其背景宏大，短篇也给电影改编留下了充裕的组织空间。电影导演贝托鲁奇（Bernardo Bertolucci）提到一种有趣说法：为了忠于原著，电影可以——有时是必须——不忠于原著，才能获得“忠实”。改编为电影的《流浪地球》（2019），出现了空间站、点燃木星、智能机器人MOSS，都是小说中没有涉及的。电影制作，有刘慈欣本人监制护驾，但《流浪地球2》分明是从《流浪地球》衍生出来的产品。较之前作改编，它与原著小说，更加不像了。</p><p>小说中的太阳氦闪，如同不可抗逆的天命，皇帝要下千百道的罪己诏。续集沿用框架设定，沉迷于机器广播的背诵复读。再一语挑明《流浪地球2》的科幻故事，它讲的是人类与量子计算机人工智能的对抗。如果要将小说搬字过纸，原样复制，展示个人和几代人的命运——被流浪地球计划裹挟的不安神思，从恐惧，到迷茫，及希望，那将会是一部科幻背景的艺术片，如同喜欢在电影里天旋地转、人物凝神呓语的泰伦斯·马力克（Terrence Malick）。有趣的是，年关前后，难产多年的《三体》影像化终于迈步，先动画，后剧集，一并上线。纯粹抄书的故事还原，剧集居然得到不少好评——尤其是把《三体》小说奉若圣经的书迷，大感意外。</p><p>
-</p><p>许多观众把硬科幻，看做国家硬实力，此类骄傲解读与兴奋言表，蔚然成风。好在导演相对清醒，知道未来要做的，是全球视角的科幻片。依中国和科幻的双重尺度，《流浪地球》有类型突破，可谓从无到有。</p>
-<p></p><p>郭帆团队的改编，走商业电影的路子。他深谙爆米花的花语，重型巨物，连环爆炸，最后一秒钟营救，噼里啪啦。这些行星发动机一类的美术制景，看上去高温燃烧预算的轰然场面，无一不在告诉影院观众，中国可以出产硬核科幻大片。</p><p>再硬的硬核科幻，终究要作为文化产品输出，是软实力。许多观众把硬科幻，看做国家硬实力，此类骄傲解读与兴奋言表，蔚然成风。好在导演相对清醒，知道未来要做的，是全球视角的科幻片。依中国和科幻的双重尺度，《流浪地球》有类型突破，可谓从无到有。背后正是刘慈欣一人如椽大笔，写就中国科幻，值得肯定与记录。作为类型的科幻电影，《流浪地球》系列在国内无传统可循，不是《大气层消失》，更不会是《上海堡垒》。它更靠近外国的科幻电影谱系，联想到《2001太空漫游》、《太空先锋》和《星际穿越》的过场桥段，不足为奇。一再搬演最后一分钟营救的《流浪地球2》，它在电影手法上，说靠近百年前大卫·格里菲斯（David Llewelyn Wark Griffith）的《党同伐异》（Intolerance，1916），也不为过。</p><p>对主流观众来说，《流浪地球2》仿佛在用新技术，讲一个新故事。前所未有，高举高打，中国终于有了拳头王炸科幻片。可是，当一部中国商业大片，被投进电影之海，又只能说，《流浪地球2》从技术到故事，一点都不新。刘慈欣和郭帆是在科幻小说与经典电影的薰陶浸淫中走向创作（正如“太空歌剧”之类的SF科学幻想专有名词，比中华人民共和国年龄还要长）。新的，可能只是冰冷，走流程，高度制式，一板一眼的中文口播。</p><p>
+<p>对主流观众来说，《流浪地球2》仿佛在用新技术，讲一个新故事。前所未有，高举高打，中国终于有了拳头王炸科幻片。可是，当一部中国商业大片，被投进电影之海，又只能说，《流浪地球2》从技术到故事，一点都不新。刘慈欣和郭帆是在科幻小说与经典电影的薰陶浸淫中走向创作（正如“太空歌剧”之类的SF科学幻想专有名词，比中华人民共和国年龄还要长）。新的，可能只是冰冷，走流程，高度制式，一板一眼的中文口播。</p><p>
 </p><p>对主流观众来说，《流浪地球2》仿佛在用新技术讲一个新故事。前所未有，中国终于有了拳头王炸科幻片。可当一部中国商业大片，被投进电影之海，又只能说，《流浪地球2》从技术到故事，一点都不新。</p>
 <p></p><p><a class="image" href="https://theinitium.com/article/20230227-culture-the-wandering-earth-2-movie/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/02/365ff145145a4058a92e9c13ceefa103.jpg?imageView2/1/w/1080/h/720/format/jpg" alt=" 《流浪地球2》剧照。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 </p><figcaption itemprop="caption"> 《流浪地球2》剧照。<span class="credit">网上图片</span></figcaption><p></p><p>2、依科幻电影的尺度看</p><p>
@@ -70,7 +66,7 @@ author: 特约撰稿人 木卫二
 </p><p>一部电影的制作，不是一个依靠技术堆砌，就会产生层级涌现的质变过程。相反，更加精密，细致，经得起时间之筛的中国科幻电影，它是需要十几二十部。</p>
 <p></p><p>三分之一能看的，来自刘德华段落。只有在这些孤独的角落——没有好风景，没有全无敌，《流浪地球2》才像个科幻电影。刘德华执念于女儿早夭，滋生心魔。科幻电影盛产疯魔科学家，他的角色，不罕见。前中影大员喇培康曾说，“（《流浪地球》）不能创造像美国那样的独狼英雄。”你误以为一部大片，居然会不需要英雄。一个人若成就英雄事业，谁管他是独狼，还是群狼。</p><p>这时候，让你再断一次句。你会发现，它的划线重点，也可以是“美国那样的”。事实上，吴京在前作，正是一个独狼英雄。《流浪地球2》的刘德华，也是一个无人认同，法律禁止，并被监禁惩戒的独狼英雄。他的存在，让整部电影不至于一无是处。若说有什么可突破的，他该表现得更像一个坏人，绝对要优于当一个好人。参考同期段，全民全网热捧<a href="https://zh.wikipedia.org/zh-tw/%E7%8B%82%E9%A3%86">《狂飙》</a>反派演员张颂文。在强力部门主导的中国影视剧中，观众必然会喜欢复杂的坏人。他们无法不爱上坏人，因为好人等同于模型。</p><p>佐证三段人物故事之优劣，尚有个更简单的方法。作为长达173分钟的电影，如三段故事各自扩充至等片长——相信没有人想看简单的大吏，一些人会看简单的大兵，而绝大多数人，希望看一个复杂的故事，人物有阴影，有灰度，有神秘不可测的人性深度。</p><p>如此一来，《流浪地球2》再次呈现极其矛盾的面目。有人要说：那保底的，你也讲了，总有三分之一的是好看的，要求不高的话，电影大半还是相当可以的。然而，三分之一的官腔做派主旋律，并不意味着你只需忍受等长时间。需知，一粒老鼠屎，就会坏了一锅汤。</p><p>主线人物以外，电影也缺乏情感铺垫与人物互动。刘德华与女儿不需太多前尘交代，吴京不舍妻子如同走过场，就像主创团队用数字化的演员吴孟达来进行致敬。</p><p>明面上的《流浪地球2》，涉及超大规模的幕后制作团队。但一部电影，并非只是停留于量化生产的工业产品。山呼海啸的无人机，遮天蔽日的发动机，它们作为功能型画面说明外，并无法制造更多凶险杀机。如果一只纤弱的蜂鸟，能带来敌情与寒意，那么，我显然会对后者印象更深刻。更何况，太多的大远景，一再对抗看不见，不可知的敌人，电影也只能停留于铺张和滥制的大场面。还有不断抬头看天，全世界各地区的老少人马。《流浪地球2》花费大量篇幅在上面（比我看过的任何一部007电影还要多），以此搭扣想象中的全人类形象，弥补主要角色缺乏外籍人员的事实。</p><p>
 </p><p>声色俱厉的“我们的人一定能完成任务”，说是军令状，不如说是终极赌气。反复的最后一秒钟营救，可说是技穷与疲惫。而最后一秒钟讲话，强调的是权力在握，最后一刻也不能放松。</p>
-<p></p><p>《流浪地球》所暴露的软肋，也发生在好莱坞超级英雄电影身上，不加节制的毁天灭地镭射光，终归要淹没和吞噬掉人物。一部电影的制作，不是一个依靠技术堆砌，就会产生层级涌现的质变过程。相反，更加精密，细致，经得起时间之筛的中国科幻电影，它是需要十几二十部，由《流浪地球》始，即将上映的《宇宙探索编辑部》，有举重若重，举重若轻，以小博大，物美价廉⋯⋯直到环境环境松动，自由想象力放飞，才能期待真正的佳作涌现。换言之，我不认为《流浪地球》系列定义了中国科幻电影，相反，它只是打开寻求中国科幻定义的一条路。而路，本就该有许多条。</p><p><a class="image" href="https://theinitium.com/article/20230227-culture-the-wandering-earth-2-movie/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/02/a4f56a79920147529365eb5bbd14ac32.jpg?imageView2/1/w/1080/h/719/format/jpg" alt=" 《流浪地球2》剧照。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<p></p><p>《流浪地球》所暴露的软肋，也发生在好莱坞超级英雄电影身上，不加节制的毁天灭地镭射光，终归要淹没和吞噬掉人物。一部电影的制作，不是一个依靠技术堆砌，就会产生层级涌现的质变过程。相反，更加精密，细致，经得起时间之筛的中国科幻电影，它是需要十几二十部，由《流浪地球》始，即将上映的《宇宙探索编辑部》，有举重若重，举重若轻，以小博大，物美价廉⋯⋯直到环境松动，自由想象力放飞，才能期待真正的佳作涌现。换言之，我不认为《流浪地球》系列定义了中国科幻电影，相反，它只是打开寻求中国科幻定义的一条路。而路，本就该有许多条。</p><p><a class="image" href="https://theinitium.com/article/20230227-culture-the-wandering-earth-2-movie/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/02/a4f56a79920147529365eb5bbd14ac32.jpg?imageView2/1/w/1080/h/719/format/jpg" alt=" 《流浪地球2》剧照。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 </p><figcaption itemprop="caption"> 《流浪地球2》剧照。<span class="credit">网上图片</span></figcaption><p></p><p>3、人类要跟着计划走</p><p>
 </p><p>“如果想逗上帝笑，就把你的计划跟它说。” ——西方谚语</p>
 <p></p><p>明面之下，也就是照本宣科的流浪地球计划之下，《流浪地球2》讲的是一个强大的中国。“我”主导联合政府（中方决策永远正确），“我”不可或缺（最后一刻连上的北京根服务器），简言之，“我爱说什么，就是什么”。人常说，艺术创作是将熟悉的东西陌生化，而在一个近未来的科幻世界中，影片反复渲染的，却是熟悉的唯意志论，盛产于中国。“人定胜天”，“不惜一切代价”，国人意志最坚定，决策最英明。</p><p>抽签决定一半人获资格，进入地下城。再到“五十岁以上出列”，死掉老年人，还有少年郎，均是这类胜利与代价的果敢体现。电影似乎相信人类的繁衍存续，允许死掉一半人——电影也懒得解释为何应该放弃另一半人。机器抽签，绝对公平。此处不必讨论公平——机器，代表公平。</p><p>喜爱漫威的观众很容易联想到纯然架空的灭霸响指，不多不少，也是随机一半。然而，《流浪地球2》影射了如此多的现实秩序，组织依然高效运作。如此轻率淘汰一半人，仿佛除了吴京以外的人都毫无怨言。大家都愿意为全人类，自行死去。</p><p>《流浪地球2》呈现了中国式的经典三段推理：中国带头拯救地球，中国人又属于人类，所以是全人类团结一致拯救地球。</p><p>
