--- a/_posts/2023-02-26-INITIUM-弦子-上野千鹤子时代的女权主义者-如何面对被-成功婚姻-挑战的女权叙事.html
+++ b/_posts/2023-02-26-INITIUM-弦子-上野千鹤子时代的女权主义者-如何面对被-成功婚姻-挑战的女权叙事.html
@@ -10,32 +10,18 @@ author: 弦子
 
 <p>「上野千鹤子曾以为婚姻制度会在她的世代里结束，可父权制对女性的吸引力却顺利延续了下去。」</p><p>弦子</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230226-opinion-new-problems-china-feminism-facing/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/02/d0f0803d3d6e4961b71f47865a8892ef.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="全嘻嘻微博的视频。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">全嘻嘻微博的视频。<span class="credit">图：影片截图</span></figcaption></figure><p><small><a href="https://theinitium.com/channel/her-country/">“女人没有国家？”</a>是端传媒新开设的专栏，名字源于伍尔芙的一句话“As a woman I have no country”，但我们保留了一个问号，希望能从问号出发，与你探讨女性和国家的关系，聆听离散中的女性故事和女性经验。我是这个栏目的编辑符雨欣。看似私领域的婚姻，指向的是问号背后、“国家”之外的另一个制度压迫，一个不可能完全离开国家的语境、却又对所有女性具有共性的制度。这帮助我们想像女性身上的种种桎梏之网的复杂性。</small></p>
-<p><strong>（中国女性主义者、发声者、写作者）</strong></p>
-<p>超越了上野本身观点所引起的关注，up主全嘻嘻与上野千鹤子的对谈成为又一个性别议题的讨论热点，全嘻嘻在视频里塑造了一个婚姻幸福且对女权主义抱有追求的精英女性形象，这引起了普遍的质疑：她的婚姻是否真的幸福、自身婚姻幸福的女性是否看不见结构性问题、在上野教授面前讨论婚姻是不是在浪费机会？</p>
-<p>这三个疑问真正在问的问题，其实是全嘻嘻本人是否幸福/有资格成为女权主义者/她应该问什么，舆论讨论也因此无可避免地聚焦在了对全嘻嘻个人的批评——对个体的过分关注，往往是公众自身焦虑的情绪性投射。</p>
-<p>全嘻嘻的视频显然有讨论的意义，意义并不在于她本人如何试图通过上野千鹤子的观点达成逻辑自洽，而在于女权主义者能否在面对这样一位精英女性与她所代表的处境时，达成自身的逻辑自洽。</p>
- 
- 
+<p><small><strong>（弦子，中国女性主义者、发声者、写作者）</strong></small></p>
+<p>超越了上野本身观点所引起的关注，up主全嘻嘻与上野千鹤子的对谈成为又一个性别议题的讨论热点，全嘻嘻在视频里塑造了一个婚姻幸福且对女权主义抱有追求的精英女性形象，这引起了普遍的质疑：她的婚姻是否真的幸福、自身婚姻幸福的女性是否看不见结构性问题、在上野教授面前讨论婚姻是不是在浪费机会？<br><br>这三个疑问真正在问的问题，其实是全嘻嘻本人是否幸福/有资格成为女权主义者/她应该问什么，舆论讨论也因此无可避免地聚焦在了对全嘻嘻个人的批评——对个体的过分关注，往往是公众自身焦虑的情绪性投射。<br><br>全嘻嘻的视频显然有讨论的意义，意义并不在于她本人如何试图通过上野千鹤子的观点达成逻辑自洽，而在于女权主义者能否在面对这样一位精英女性与她所代表的处境时，达成自身的逻辑自洽。<br><br>但针对作为个体的全嘻嘻的三个问题，需要回答的恰是关注此事的女权主义者自己：女性是否可能在婚姻中获益/女性赢家的出现是否改变了父权制结构/女权主义者对父权制的反叛要往何处去？</p>
+<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230226-opinion-new-problems-china-feminism-facing/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/02/242784fcf3f249cf9bd3afb3b5598151.jpg?imageView2/1/w/1080/h/600/format/jpg" alt="《北大宿舍聊天x上野千鹤子｜只要自由地活著，怎么样都可以》。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<figcaption itemprop="caption">《北大宿舍聊天x上野千鹤子｜只要自由地活著，怎么样都可以》。<span class="credit">图：影片截图</span></figcaption></figure>
 
- 
- 
- 
- 
- 
- 
- 
-
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
+<h2>全嘻嘻真的不幸福吗？当进入婚姻比单身幸福</h2>
+<blockquote>
+<p>通过外在的物质与内在的精神，父权制以惩罚单身者、惩罚弱者的方式给参与者提供资源，这正是父权制得以长久延续的原因。</p>
+</blockquote>
+<p>两张盛传的对话截图成为全嘻嘻“婚姻不幸的罪证”：她因为老公的反悔而推翻丁克计划、在老公考虑购买性服务时选择自我反思。可这显然违背了一种常识：这并不是一个弱者会受到追捧的社会，任何人都无法仅仅通过不幸得到关注。<br><br>作为一个符合主流社会标准的中产精英，全嘻嘻能在全平台收获流量的原因，恰好是在于她极为坦诚地展示了自身的欲望：如何在一个人人焦虑的环境里追求个人利益的最大化。两张截图不过是追求中必不缺少的符号，象征着困境的存在与被超越，她因此做到了对欲望最充分的展露——困难源源不断，欲望永无止境。<br><br>全嘻嘻在自己的栏目里向受众详细展示了困境如何被克服的实际操作。以家庭对女性职业发展影响最大的育儿劳动为例：全嘻嘻拒绝任何育儿与家务劳动，具体描述是“一整年和女儿单独相处的时间只有十几个小时”，她在生产第五天后回到职场，将育儿劳动完全交给丈夫与丈夫的母亲，丈夫的母亲从事育儿与家务的双重工作，得到一个月几千的“工资”作为回报。同时，全嘻嘻也确实做到了在有一份全职工作的同时运营了一个有大量产出的自媒体栏目，这样的工作强度佐证了她陈述的可信性。<br><br>在全嘻嘻与丈夫的对谈中，男方反复提到的一句话是“家庭作为一个整体的利益”，全嘻嘻提到的则是“个人职场发展”。家庭作为一个整体要追求利益最大化，这显然是父权制家庭在过去要求经济上处于弱势的女性为男性提供无偿劳动的借口，然而当女性在经济上足够强势时，“家庭利益最大化”与“女性个人发展”的达成了目标上的统一， 在这样的条件下，全嘻嘻拥有了与父权制家庭共赢的物质基础。<br><br>上一个十年，大陆的产业结构发生了巨大的变革，互联网行业、自媒体行业、影视行业、教培行业等行业处于风口，这些新兴行业的生产模式，相对来说给予了女性一个比过去公平的职业赛道，经济产业结构的变革制造了数量相当之多的职场女性精英，而传统家庭内部性别分工的不公平作为一种知识概念，通过女权运动在女性中得到了基本的普及，与此同时，依然存在的传统家庭代际关系，为年轻一代父母将自身需要承担的育儿劳动以最低廉代价转嫁给上一代女性，提供了可操纵性。<br><br>全嘻嘻代表了一种可以说是大陆精英女性所独有的，在婚姻中实现个人利益最大化的操作：家庭外部的职业发展是经济基础、家庭内部的代际关系作为解决方式、进步的性别观念提供道德依据，三者缺一不可，女性由此将自己在婚姻中的损失降到可能性的最低，即完成了收益大于损失的实现。<br><br>何为收益大于损失？全嘻嘻在视频里这么说：“你的财务达到安全之后就会觉得有一个伴侣更好，因为他会照顾好你的生活且提供情绪价值”，这句不经意的欲望坦白是重要的，解释了为什么在自由市场与经济转型给当代女性提供了经济上的资源后，为何依然有女性愿意走入婚姻，父权制的坚固在于一整套精密的制度设计，而这套设计亦在随着时代变化自我调整——</p>
+<p>经济。在过去，没有继承权与就业权的女性必须通过进入婚姻，给男性提供无偿的家务与生育劳动才能获得生存资源，相当长的时代里，这是女性的唯一选择，与其说进入婚姻是为了获得利益，不如说不进入婚姻会有无法承受的惩罚。而当下，在房价与户籍制度的设计面前，拥有更多资产才可以抵御风险与损耗。中产家庭意味着经济上的合并，双方组合得到一线房产、投资、现金流等稳定的资产组合，单身者则要承担更大的损耗。通过制度的设计，父权制以将资源完全集中在制度之内的方式，引诱人们服从自己，当单身的年轻人们选择躺平这样对父权制的消极抵抗时，中产家庭则期待着“财务自由”，父权制的服从者清楚自己可以从中获得更多资源。</p>
+<p>精神。如果我们认识到父权制给社会制造着灾难与暴力，一个主流价值取向极度单一的社会本身就在给人们的精神带来伤害，就不得不承认情绪价值的珍贵，当一段可以提供稳定情绪价值的关系成为压力之下人们的生存前提时，不计代价的希望将这段关系绑定也是人之常情。婚姻制度则暗示性缘关系可以让人们绑定一个对抗焦虑的帮手，从而有更多精力参与到对社会资源的争夺中去。当女性和男性一样拥有社会关系后，女性也和男性共享了对性缘关系的渴望。</p>
  
  
 
@@ -59,10 +45,21 @@ author: 弦子
  
  
  
-<p>但针对作为个体的全嘻嘻的三个问题，需要回答的恰是关注此事的女权主义者自己：女性是否可能在婚姻中获益/女性赢家的出现是否改变了父权制结构/女权主义者对父权制的反叛要往何处去？</p><p><a class="image" href="https://theinitium.com/article/20230226-opinion-new-problems-china-feminism-facing/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/02/242784fcf3f249cf9bd3afb3b5598151.jpg?imageView2/1/w/1080/h/600/format/jpg" alt="《北大宿舍聊天x上野千鹤子｜只要自由地活著，怎么样都可以》。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-</p><figcaption itemprop="caption">《北大宿舍聊天x上野千鹤子｜只要自由地活著，怎么样都可以》。<span class="credit">图：影片截图</span></figcaption><p></p><p>全嘻嘻真的不幸福吗？当进入婚姻比单身幸福</p><p>
-</p><p>通过外在的物质与内在的精神，父权制以惩罚单身者、惩罚弱者的方式给参与者提供资源，这正是父权制得以长久延续的原因。</p>
-<p></p><p>两张盛传的对话截图成为全嘻嘻“婚姻不幸的罪证”：她因为老公的反悔而推翻丁克计划、在老公考虑购买性服务时选择自我反思。可这显然违背了一种常识：这并不是一个弱者会受到追捧的社会，任何人都无法仅仅通过不幸得到关注。<br><br>作为一个符合主流社会标准的中产精英，全嘻嘻能在全平台收获流量的原因，恰好是在于她极为坦诚地展示了自身的欲望：如何在一个人人焦虑的环境里追求个人利益的最大化。两张截图不过是追求中必不缺少的符号，象征着困境的存在与被超越，她因此做到了对欲望最充分的展露——困难源源不断，欲望永无止境。<br><br>全嘻嘻在自己的栏目里向受众详细展示了困境如何被克服的实际操作。以家庭对女性职业发展影响最大的育儿劳动为例：全嘻嘻拒绝任何育儿与家务劳动，具体描述是“一整年和女儿单独相处的时间只有十几个小时”，她在生产第五天后回到职场，将育儿劳动完全交给丈夫与丈夫的母亲，丈夫的母亲从事育儿与家务的双重工作，得到一个月几千的“工资”作为回报。同时，全嘻嘻也确实做到了在有一份全职工作的同时运营了一个有大量产出的自媒体栏目，这样的工作强度佐证了她陈述的可信性。<br><br>在全嘻嘻与丈夫的对谈中，男方反复提到的一句话是“家庭作为一个整体的利益”，全嘻嘻提到的则是“个人职场发展”。家庭作为一个整体要追求利益最大化，这显然是父权制家庭在过去要求经济上处于弱势的女性为男性提供无偿劳动的借口，然而当女性在经济上足够强势时，“家庭利益最大化”与“女性个人发展”的达成了目标上的统一， 在这样的条件下，全嘻嘻拥有了与父权制家庭共赢的物质基础。<br><br>上一个十年，大陆的产业结构发生了巨大的变革，互联网行业、自媒体行业、影视行业、教培行业等行业处于风口，这些新兴行业的生产模式，相对来说给予了女性一个比过去公平的职业赛道，经济产业结构的变革制造了数量相当之多的职场女性精英，而传统家庭内部性别分工的不公平作为一种知识概念，通过女权运动在女性中得到了基本的普及，与此同时，依然存在的传统家庭代际关系，为年轻一代父母将自身需要承担的育儿劳动以最低廉代价转嫁给上一代女性，提供了可操纵性。<br><br>全嘻嘻代表了一种可以说是大陆精英女性所独有的，在婚姻中实现个人利益最大化的操作：家庭外部的职业发展是经济基础、家庭内部的代际关系作为解决方式、进步的性别观念提供道德依据，三者缺一不可，女性由此将自己在婚姻中的损失降到可能性的最低，即完成了收益大于损失的实现。<br><br>何为收益大于损失？全嘻嘻在视频里这么说：“你的财务达到安全之后就会觉得有一个伴侣更好，因为他会照顾好你的生活且提供情绪价值”，这句不经意的欲望坦白是重要的，解释了为什么在自由市场与经济转型给当代女性提供了经济上的资源后，为何依然有女性愿意走入婚姻，父权制的坚固在于一整套精密的制度设计，而这套设计亦在随着时代变化自我调整——</p><p>经济。在过去，没有继承权与就业权的女性必须通过进入婚姻，给男性提供无偿的家务与生育劳动才能获得生存资源，相当长的时代里，这是女性的唯一选择，与其说进入婚姻是为了获得利益，不如说不进入婚姻会有无法承受的惩罚。而当下，在房价与户籍制度的设计面前，拥有更多资产才可以抵御风险与损耗。中产家庭意味着经济上的合并，双方组合得到一线房产、投资、现金流等稳定的资产组合，单身者则要承担更大的损耗。通过制度的设计，父权制以将资源完全集中在制度之内的方式，引诱人们服从自己，当单身的年轻人们选择躺平这样对父权制的消极抵抗时，中产家庭则期待着“财务自由”，父权制的服从者清楚自己可以从中获得更多资源。</p><p>精神。如果我们认识到父权制给社会制造着灾难与暴力，一个主流价值取向极度单一的社会本身就在给人们的精神带来伤害，就不得不承认情绪价值的珍贵，当一段可以提供稳定情绪价值的关系成为压力之下人们的生存前提时，不计代价的希望将这段关系绑定也是人之常情。婚姻制度则暗示性缘关系可以让人们绑定一个对抗焦虑的帮手，从而有更多精力参与到对社会资源的争夺中去。当女性和男性一样拥有社会关系后，女性也和男性共享了对性缘关系的渴望。</p><p>当一部分女性通过个人能力与时代风口改变了自身的弱者处境时，父权制给予她们的幻觉，即女性已经改写了父权制利益分配的机制，因为自己赢得的利益更多。可事实上，父权制以惩罚单身者、惩罚弱者的方式为参与者提供资源，以完成自身的存续，在时代变革之时，精英女性正是被父权制为自身存续所精心挑选出的胜利者。</p><p><a class="image" href="https://theinitium.com/article/20230226-opinion-new-problems-china-feminism-facing/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/02/de9e21be5adf474bbb8453dff22a3407.jpg?imageView2/1/w/1080/h/1080/format/jpg" alt="up主全嘻嘻。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+
+ 
+ 
+ 
+ 
+ 
+ 
+<p>当一部分女性通过个人能力与时代风口改变了自身的弱者处境时，父权制给予她们的幻觉，即女性已经改写了父权制利益分配的机制，因为自己赢得的利益更多。可事实上，父权制以惩罚单身者、惩罚弱者的方式为参与者提供资源，以完成自身的存续，在时代变革之时，精英女性正是被父权制为自身存续所精心挑选出的胜利者。</p><p><a class="image" href="https://theinitium.com/article/20230226-opinion-new-problems-china-feminism-facing/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/02/de9e21be5adf474bbb8453dff22a3407.jpg?imageView2/1/w/1080/h/1080/format/jpg" alt="up主全嘻嘻。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 </p><figcaption itemprop="caption">up主全嘻嘻。<span class="credit">图：网上图片</span></figcaption><p></p><p>菁英女性成为赢家，父权依然是最后的获利者</p><p>
 </p><p>当一部分女性从父权制中得到更多分红的时候，家庭作为一种最小的统治单位反而得到了巩固。</p>
 <p></p><p>在一个性别议题与公共议题的讨论空间不断坍塌，女权主义者在追求结构改变的过程中屡遭打击的环境里，结婚率与生育率的降低在事实上展现了女性对父权制的对抗。拒绝进入婚姻与生育，成为在当下的社会空间中，女性最底线也是最重要的抗争手段。在指出婚姻制度问题的前提下，女权主义者的反婚策略是诉诸个体的情感动员——“进入婚姻的女性一定会被男性剥削”。</p><p>然而这样的叙事显然因为精英女性的赢家身份被打破了，这在社群内部制造了焦虑，矛盾与讨论也由此而来。</p><p>女权主义者寄希望于建立更加多元、公平的关系模式来瓦解父权制，却忽视了在父权制对婚姻制度的分红之下，进行内部博弈给自己争取更多利益本身也成为了一种诱惑。异性恋婚姻的诱惑不是公平，而是在家庭单位内部为个体提供了博弈胜利、欲望无限扩张的可能。全嘻嘻对婚姻的欲望是对方为自己持续并稳定地提供生活上的照料与情绪价值，对方则趁此提出自己的要求：子女。双方都为自己的欲望做出了妥协，妥协证明的正是欲望的强烈。 </p><p>全嘻嘻对自我欲望的暴露与实现，演绎了当女性的内心欲望与个人利益高度统一，即最高效率地得到世俗成功时，她有相当把握从父权制中得到好处，以一种全新的方式：女性不再是通过婚姻向男性乞求资源，而是追求以个人能力在社会层面实现自我利益的最大化，家庭的价值是让自己的奋斗之路持续化且稳定。</p><p>全嘻嘻不是个例，当公共视线里出现越来越多事业成功的女性时，我们不难发现传统的父权制婚姻发生了改变，女性渴望得到主流价值上的成功，女性对成功的渴望也给父权制提供了新的存续机会。</p><p>事实上，值得讨论的并非个体是否幸福，在一个主流价值观极其单一的社会，幸福无非是父权制给主流群体所提供的生活模板，吸引人们自愿加入而延续父权制的统治，真正需要讨论的是，即使父权制家庭有功利主义的价值，其存在就必然合理吗？</p><p>在上野千鹤子的《资本主义与父权制》里，她解释父权制是一个复杂的概念，以生产方式的角度，“父权制是男性对女性劳动力的统治，女性在家庭内部所从事的再生产劳动被社会剥夺了价值”。在全嘻嘻与丈夫构成的家庭内部，父权制的剥削事实上依然存在：上一代的女性在这个家庭里承担了绝大部分的育儿与家务劳动，得到的报酬却远远低于市场价值（即使是市场价值也存在着对劳动者的剥削），进入中产的中年人可以对上一代的女性进行剥削，依靠的是城乡二元发展所带来的不平等，以及依然有女性被爱与道德的名义绑架，不得不在家庭内部进行无偿或得不到应有回报的再生产劳动。</p><p>对女性再生产劳动价值进行剥削的基础还在于，父权制将家庭内部作为一个利益共同体，需要不断强调共同体的利益最大化，即使家庭中的女性得到了育儿与家庭的解放，家务劳动依然必须有人承担，承担者被排除在利益共同体外部，其牺牲也变的合理化，于是女性的再生产劳动也有可能被其他女性贬低。</p><p>这依然是父权制的阴谋，通过有限且严格的利益分配，人与人之间的关系必须是婚姻制度内的异性恋性缘关系，人们无法通过其他方式连接起来，正如女性之间也缺少统一的动员机制，这就为父权制的延续提供了管理的基础。</p><p>即使是一个精英女性可能成为赢家的婚姻里，父权制依然是最后的获利者：女性的再生产劳动得不到价值承认，男性对女性劳动力的统治不会得到结构性的改变。当一部分女性从父权制中得到更多分红的时候，家庭作为一种最小的统治单位反而得到了巩固，上野千鹤子曾以为婚姻制度会在她的世代里结束，可父权制对女性的吸引力却顺利延续了下去。</p><p><a class="image" href="https://theinitium.com/article/20230226-opinion-new-problems-china-feminism-facing/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/02/a632a4597681418e9cfb7a89d9fb609b.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="日本社会学家上野千鹤子。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
